--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
   <p>I'm looking for a specific type of business. If yours ticks most of these boxes, I'd love to hear from you.</p>
 
   <ul class="criteria">
-    <li><strong>Profitable</strong> — the business must be generating genuine, provable profit (minimum ~$150k/year net)</li>
+    <li><strong>Profitable</strong> — the business must be generating genuine, provable profit</li>
     <li><strong>Under management</strong> — already runs with a manager/team in place, or can be transitioned to that model without major disruption</li>
     <li><strong>Sydney or nearby</strong> — based in Greater Sydney or within a reasonable distance</li>
     <li><strong>Motivated seller</strong> — you have a genuine reason to sell (retirement, relocation, health, new venture, etc.)</li>
